--- a/.github/workflows/publish-report.yml
+++ b/.github/workflows/publish-report.yml
@@ -3,6 +3,7 @@ name: Publish Cucumber Report to GitHub Pages
 on:
   push:
     branches: [ main, master ]
+    workflow_dispatch:
 
 permissions:
   contents: read
