--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,12 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-
+    workflow_dispatch:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
+    permissions: write-all
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
