--- a/.github/workflows/publish-report.yml
+++ b/.github/workflows/publish-report.yml
@@ -32,8 +32,8 @@ jobs:
           java-version: '17'
           cache: maven
 
-      - name: Run tests and generate Cucumber report
-        run: mvn -B clean test
+      - name: Run tests and generate Cucumber report (allow failures so report still publishes)
+        run: mvn -B clean test -DtestFailureIgnore=true
 
       - name: Prepare report for GitHub Pages
         run: |
